--- a/project/package.json
+++ b/project/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "swiper": "^6.8.4",
+    "swiper": "^8.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -37,6 +37,9 @@
     },
     "rules": {}
   },
+  "tags": [
+    "swiper"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
